[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AuthAPI"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "sqlalchemy>=2.0",
  "asyncpg",
  "bcrypt>=4",
  "PyJWT>=2.10",
  "pydantic>=2.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["AuthAPI*"]