[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AuthAPI"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "sqlalchemy>=2.0",
  "asyncpg",
  "pydantic>=2.7",
  "email-validator>=2.0",
  "PyJWT>=2.10",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0,<5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["AuthAPI*"]